--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@ img {
 body {
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 12px;
-	color: #FFF3DC;
+	color: #8E3F33;
 }
 
 h2 {
@@ -63,6 +63,24 @@ li {
 	padding-left: 50px;
 	padding-right: 50px;
 	padding-top: 5px;
+}
+
+li a {
+	color: #E1C48B;
+}
+
+.order-now {
+	color:#8E3F33;
+	font-size: 28px;
+	font-weight: bold;
+	justify-content: center;
+	align-items: center;
+	display:flex;
+	margin-top: 18px;
+ }
+
+#header-box2{
+	background-color: #E1C48B;
 }
 
 /*Common page elements  */
@@ -102,12 +120,30 @@ you work on and the intended audience */
 	grid-column: 3/11;
 	/* Remove as content will dictate height */
 	height: 80px;
+	padding: 5px;
 }
+
+#main-nav li a:hover {
+	border-right: 3px solid #E1C48B;
+	border-left: 3px solid #E1C48B;
+	transition: 0.5s;
+   }
 
 #header-box2 {
 	grid-column: 11/-1;
 	/* Remove as content will dictate height */
 	height: 80px;
+}
+
+#header-box2:hover {
+	background-color: #66281e;
+	transition: 0.5s;
+	
+}
+
+#order-now:hover {
+	color: #E1C48B;
+	transition: 0.5s;
 }
 
 /* Specific to index page desktop  */
@@ -157,11 +193,11 @@ you work on and the intended audience */
 }
 
 .product-box {
-	background-color: #ddd;
+	background-color: #E1C48B;
 }
 
 #about-con {
-	background-color: #ddd;
+	background-color: #E1C48B;
 	padding-top: 10px;
 	padding-bottom: 10px;
 }
@@ -202,7 +238,7 @@ you work on and the intended audience */
 /*Common page elements  */
 
 #footer-con {
-	background-color: #aaaaaa;
+	background-color: #8E3F33;
 	padding-top: 50px;
 	padding-bottom: 20px;
 }
@@ -243,8 +279,7 @@ you work on and the intended audience */
 /* gallery page */
 
 #gallery-hero-con {
-	background-color: #aaaaaa;
-	background: url("https://via.placeholder.com/1920x580");
+	background-image: url(../images/hero.jpg);
 	height: 580px;
 }
 
@@ -277,9 +312,40 @@ you work on and the intended audience */
   }
 
 .gallery-box {
-	background-color: #ddd;
+	background-color: #E1C48B;
 	grid-column: span 4 / span 4;
 	/* Remove as content will dictate height */
 	height: 507px;
 	margin-bottom: 20px;
 }
+
+#contact-form {
+	height: 380px;
+ }
+ 
+ #contact-form {
+	grid-column: 7/-1;
+	align-self: end;
+ }
+ 
+ #contact-form-text p {
+	grid-column: 8/-1;
+	margin-bottom: 80px;
+ }
+ 
+ #contact-form-address-left {
+	grid-column: 8/-1;
+ }
+ 
+ #contact-form-address-left h3 {
+	margin-bottom: 20px;
+	font-size: 36px;
+ }
+ 
+ #contact-form-address-left p {
+	margin-bottom: 20px;
+ }
+ 
+ #contact-form-fields-right {
+	grid-column: 8/-1;
+ }
